forgot number of commit

--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.7.2",
+    "btoa": "^1.2.1",
     "expo": "~50.0.14",
     "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.0",
+    "https": "^1.0.0",
+    "https-agent": "^1.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
